# bit7zip-test

./: CMakeLists.txt  CMakePresets.json  configure_test_h.cmake  test.cpp  test.h.in  test.patch.cmake  test.sh  vcpkg.json
.github/workflows/: main.yml
cmake/: MinGWDlls.cmake
overlays/ports/bit7z/: portfile.cmake  test.patch
overlays/triplets/: x64-osx-dynamic.cmake
